Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@
                             <a href="https://twitter.com/laxmanpoudel" target="_blank" class="w-12 h-12 rounded-xl bg-gray-100 dark:bg-gray-700 flex items-center justify-center text-gray-600 dark:text-gray-300 hover:bg-indigo-600 hover:text-white transition-all duration-300 transform hover:-translate-y-1 shadow-lg hover:shadow-xl" aria-label="Visit my Twitter profile">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a href="https://linkedin.com/in/laxmanpoudel" target="_blank" class="w-12 h-12 rounded-xl bg-gray-100 dark:bg-gray-700 flex items-center justify-center text-gray-600 dark:text-gray-300 hover:bg-indigo-600 hover:text-white transition-all duration-300 transform hover:-translate-y-1 shadow-lg hover:shadow-xl" aria-label="Visit my LinkedIn profile">
+                            <a href="https://linkedin.com/in/laxman-poudel" target="_blank" class="w-12 h-12 rounded-xl bg-gray-100 dark:bg-gray-700 flex items-center justify-center text-gray-600 dark:text-gray-300 hover:bg-indigo-600 hover:text-white transition-all duration-300 transform hover:-translate-y-1 shadow-lg hover:shadow-xl" aria-label="Visit my LinkedIn profile">
                                 <i class="fab fa-linkedin-in"></i>
                             </a>
                             <a href="https://github.com/iamlaxman" target="_blank" class="w-12 h-12 rounded-xl bg-gray-100 dark:bg-gray-700 flex items-center justify-center text-gray-600 dark:text-gray-300 hover:bg-indigo-600 hover:text-white transition-all duration-300 transform hover:-translate-y-1 shadow-lg hover:shadow-xl" aria-label="Visit my GitHub profile">
@@ -1035,7 +1035,7 @@
                         <a href="https://twitter.com/laxmanpoudel" target="_blank" class="social-link w-12 h-12 rounded-xl bg-gray-800 hover:bg-indigo-600 text-gray-300 hover:text-white flex items-center justify-center transition-all duration-300 transform hover:-translate-y-1 shadow-lg hover:shadow-xl" aria-label="Visit my Twitter profile">
                             <i class="fab fa-twitter text-lg"></i>
                         </a>
-                        <a href="https://linkedin.com/in/laxmanpoudel" target="_blank" class="social-link w-12 h-12 rounded-xl bg-gray-800 hover:bg-indigo-600 text-gray-300 hover:text-white flex items-center justify-center transition-all duration-300 transform hover:-translate-y-1 shadow-lg hover:shadow-xl" aria-label="Visit my LinkedIn profile">
+                        <a href="https://linkedin.com/in/laxman-poudel" target="_blank" class="social-link w-12 h-12 rounded-xl bg-gray-800 hover:bg-indigo-600 text-gray-300 hover:text-white flex items-center justify-center transition-all duration-300 transform hover:-translate-y-1 shadow-lg hover:shadow-xl" aria-label="Visit my LinkedIn profile">
                             <i class="fab fa-linkedin-in text-lg"></i>
                         </a>
                         <a href="https://github.com/iamlaxman" target="_blank" class="social-link w-12 h-12 rounded-xl bg-gray-800 hover:bg-indigo-600 text-gray-300 hover:text-white flex items-center justify-center transition-all duration-300 transform hover:-translate-y-1 shadow-lg hover:shadow-xl" aria-label="Visit my GitHub profile">
@@ -1645,4 +1645,5 @@
     </script>
 
 </body>
+
 </html>
