Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/terminal-portfolio.html
+++ b/terminal-portfolio.html
@@ -634,7 +634,7 @@
             ],
             social: {
                 github: "https://github.com/iamlaxman",
-                linkedin: "https://linkedin.com/in/laxmanpoudel",
+                linkedin: "https://linkedin.com/in/laxman-poudel",
                 email: "mailto:ethical.laxman@gmail.com",
                 twitter: "https://twitter.com/laxmanpoudel",
                 facebook: "https://facebook.com/laxmanpoudel2008"
@@ -1165,4 +1165,5 @@
       }
     </script>
 </body>
+
 </html>
